--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Pythonの仮想環境とキャッシュ
+tmp/
 venv/
 __pycache__/
 
@@ -12,11 +13,8 @@ __pycache__/
 *.pyo
 *.pyd
 
-# プロジェクトで無視するファイル
-.tree_file.txt
-
 # その他の無視対象
-.DS_Store  # macOSのシステムファイル
-.idea/     # IntelliJ IDEAの設定ファイル
-.vscode/   # Visual Studio Codeの設定ファイル
-*.swp      # Vimのスワップファイル
+.DS_Store
+.idea/
+.vscode/
+*.swp
