--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ __pycache__/
 *.pyo
 *.pyd
 
+# 大容量ファイル
+.venv/Lib/site-packages/cv2/cv2.pyd
+.venv/Lib/site-packages/torch/lib/torch_cpu.dll
+.venv/Lib/site-packages/torch/lib/dnnl.lib
+
 # その他の無視対象
 .DS_Store
 .idea/
